<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/newspapermenu"
        android:icon="@drawable/ic_baseline_list_alt_24"
        android:title="Newspaper"/>
    <item
        android:id="@+id/homemenu"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="Home"/>
    <item
        android:id="@+id/memenu"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="Me"/>
</menu>